compiler/fir/analysis-tests/testData/resolve/diagnostics/privateInEnumEntry.kt
enum class SomeEnum {
    SINGLE {
        fun bar() {
            <!HIDDEN!>foo<!>() // Should be Ok
        }

        private fun foo() {}
    };
}